# brulr

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  markdown.yml  release.yml
src/: backend.rs  burn.rs  calibrate.rs  catalog.rs  lib.rs  main.rs  rng.rs  target.rs  usage.rs
tests/: cli.rs
